--- a/index.html
+++ b/index.html
@@ -5,9 +5,59 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/portfolio.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <title>Developer Portfolio</title>
 </head>
 <body>
-    
+    <header class="header-section">
+        <nav>
+            <h2 class="nav-title">Ma<span class="primary-colur">r</span>y</h2>
+            <ul>
+                <li>Portfolio</li>
+                <li>Blog</li>
+                <li><button class="btn-primary">Hire Me</button></li>
+            </ul>
+        </nav>
+
+        <div class="banner">
+            <div>
+                <h3 class="banner-sub-title">Hi, I am</h3>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p class="banner-discription">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-secondary">Contact</button>
+            </div>
+            <img src="images/hardy.png" alt="Developer-image">
+        </div>
+    </header>
+
+    <!-- main section -->
+
+    <main>
+        <section class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-discription">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="about-info-container">
+                <div class="about-info">
+                    <p class="info-title">Name</p>
+                    <p class="info-description">Mary Hardy</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Email</p>
+                    <p class="info-description">info@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Speciality</p>
+                    <p class="info-description">Web Development</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Location</p>
+                    <p class="info-description">DDhaka</p>
+                </div>
+            </div>
+
+            
+        </section>
+    </main>
 </body>
 </html>
