--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/e58b0e44a8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/portfolio.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
     <title>Developer Portfolio</title>
 </head>
+
 <body>
     <header class="header-section">
         <nav>
@@ -23,9 +29,10 @@
             <div>
                 <h3 class="banner-sub-title">Hi, I am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
-                <p class="banner-discription">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-secondary">Contact</button>
+                <p class="banner-discription">Shot what able cold new see hold.Friendly as an betrayed formerly he.
+                    Morning because as to society behaved moments.</p>
+                <button class="btn-primary"><i class="fa-solid fa-file-arrow-down"></i> Download CV</button>
+                <button class="btn-secondary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img src="images/hardy.png" alt="Developer-image">
         </div>
@@ -34,9 +41,14 @@
     <!-- main section -->
 
     <main>
+        <!-- About Me Sectiion -->
+
         <section class="about">
-            <h3 class="section-title">About Me</h3>
-            <p class="section-discription">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <h3 class="section-title">About <span class="primary-colur">Me</span></h3>
+            <p class="section-discription">I, m a designer & developer with a passion for web design. I enjoy developing
+                simple, clean and slick websites that provide real value to the end user. Thousands of clients have
+                procured exceptional resulfs while working with me. Delivering work within time and budget which meets
+                clients requirements in our mata.</p>
             <div class="about-info-container">
                 <div class="about-info">
                     <p class="info-title">Name</p>
@@ -56,8 +68,130 @@
                 </div>
             </div>
 
-            
         </section>
+
+        <!-- What I Do Section -->
+
+        <section class="what-i-do">
+            <h3 class="section-title"> What <span class="primary-colur">I</span> Do</h3>
+            <p class="section-discription-what-i-do">I have more than 10 years experience building software for clients
+                all over the world. Below is a quick overview of my main technical skill sets and technologies i use.
+                Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">Venila JavaScript</p>
+                    <p class="skill-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id quisquam,
+                        asperiores nam suscipit cupiditate molestias.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-description">Eaque ad reiciendis temporibus, incidunt vel a qui iste adipisci
+                        eligendi aliquam ipsa labore id?</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">MongoDB</p>
+                    <p class="skill-description">In sit impedit modi aperiam molestiae reprehenderit molestias quia
+                        inventore a, ea sint? Officiis, sunt?</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">NodeJS</p>
+                    <p class="skill-description">Deleniti officiis sequi deserunt corporis quae dolorum, consectetur
+                        facilis corrupti voluptate dolorem placeat optio rem.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- A Summary of my Resume Sectiom -->
+
+        <section class="resume">
+            <h3 class="resume-title"> A Summary of <span class="primary-colur">My Resume</span></h3>
+            <div class="resume-container">
+                <div>
+                    <h4 class="experience">My Education</h4>
+                    <div class="resume-details">
+                        <h4 class="title">Masters in Computer Science</h4>
+                        <h5 class="description">Dhaka University / 2017-2019</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, doloribus.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-details">
+                        <h4 class="title">Bachelor in Computer Science</h4>
+                        <h5 class="description">Dhaka University / 2017-2019</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, doloribus.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-details">
+                        <h4 class="title">Diploma in Computer Science</h4>
+                        <h5 class="description">Dhaka University / 2017-2019</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, doloribus.</p>
+                    </div>
+
+
+                </div>
+
+                <div>
+                    <h4 class="experience">My Experience</h4>
+                    <div class="resume-details">
+                        <h4 class="title">Sr. Font End Developer </h4>
+                        <h5 class="description">Dhaka University / 2017-2019</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, doloribus.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-details">
+                        <h4 class="title">Junior Font End Developer </h4>
+                        <h5 class="description">Dhaka University / 2017-2019</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, doloribus.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-details">
+                        <h4 class="title">Font End Developer </h4>
+                        <h5 class="description">Dhaka University / 2017-2019</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, doloribus.</p>
+                    </div>
+
+                </div>
+            </div>
+            <div class="resume-btn">
+                <button class="btn-primary"><i class="fa-solid fa-file-arrow-down"></i> Download CV</button>
+            </div>
+            <!--  Footer Section -->
+
+            <section class="footer-section-container">
+
+                <div class="footer-section">
+                    <h3 class="footer-title">Let's Connect</h3>
+                    <p class="footer-description">Please fill out the form on this section to contact with me or call
+                        between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                    <a href="https://www.facebook.com/" target="_blank"><img src="images/icons/facebook.png"
+                            alt="facebook"></a>
+                    <a href="https://twitter.com/?lang=en" target="_blank"><img src="images/icons/twitter.png"
+                            alt="twitter"></a>
+                    <a href="https://www.instagram.com/?hl=en" target="_blank"><img src="images/icons/insta.png"
+                            alt="instagram"></a>
+
+                </div>
+                <div class="footer-section">
+                    <h3 class="footer-title">Let's Message Me</h3>
+                    <form>
+                        <input type="text" class="input-field" placeholder="Your Name"> <br>
+                        <input type="email" class="input-field" placeholder="Your Email"> <br>
+                        <textarea cols="30" rows="10" class="input-field-text-area"
+                            placeholder="Message"></textarea><br>
+                        <input class="btn-primary" type="submit" value="Submit">
+
+                    </form>
+
+                </div>
+
+            </section>
+
     </main>
+
 </body>
+
 </html>
